# Todo-In-Memory-Python-Console-App

./: README.md  pyproject.toml  requirements.txt  run.bat  test_todo_app.py
.specify/memory/: agent-context.md  constitution.md
history/prompts/001-todo-app/: 001-todo-app-clarification.spec.prompt.md  002-todo-app-planning.plan.prompt.md  003-todo-app-tasks.tasks.prompt.md  004-todo-app-implementation.tasks.prompt.md  2-create-todo-app-spec.spec.prompt.md
history/prompts/constitution/: 1-update-python-todo-constitution.constitution.prompt.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-contract.md
src/todo_app/: main.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt
src/todo_app/cli/: interface.py
src/todo_app/models/: task.py
src/todo_app/services/: task_manager.py
